# stud-ip-scraper

./: Cargo.toml  README.md
src/: common_data.rs  course.rs  course_modules.rs  institute.rs  keys.csv  lib.rs  news.rs  questionnaire.rs  ref_source.rs  search.rs  translations.rs  user.rs
src/course_modules/: file.rs  members.rs  overview.rs
