[package]
name = "stud_ip_scraper"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/RedstoneMedia/bogo-plus-plus"
homepage = "https://github.com/RedstoneMedia/bogo-plus-plus"
description = "Blazingly fast 🚀 library for interacting with Stud.IP 📚"
keywords = ["stud-ip", "StudIP", "web-scraping", "scraper"]
categories = ["web-programming::http-client"]

[features]
verbose = []
rate_limiting = []
default = ["rate_limiting"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies", "gzip"] }
scraper = "0.19.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.3"
anyhow = "1.0"
once_cell = "1.19.0"
url = "2.5"