[package]
name = "stud_ip_scraper"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/RedstoneMedia/stud-ip-scraper"
homepage = "https://github.com/RedstoneMedia/stud-ip-scraper"
description = "Blazingly fast 🚀 library for interacting with Stud.IP 📚"
keywords = ["stud-ip", "StudIP", "web-scraping", "scraper"]
categories = ["web-programming::http-client"]

[features]
verbose = ["dep:log"]
rate_limiting = []
default = ["rate_limiting"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "rustls-tls", "json"] }
scraper = "0.19"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
anyhow = "1"
once_cell = "1.20"
url = "2.5"
itertools = "0.14"
log = { version = "0.4", optional = true }